# hornet

./: .gitattributes  .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  README.orig  configure.ac
doc/: Makefile.am
doc/design/: .gitignore  Makefile.am  config.xsl  dbdar.sty  design.xml  docs.css
doc/manual/: Makefile.am  manual.xml
examples/adaptive/: o1turn_adaptive_vc.cfg  o1turn_adaptive_xbar.cfg  o1turn_random.cfg
examples/blackscholes/: Makefile  README  blackscholes.c  blackscholes.c.orig  blackscholes.cfg  blackscholes.img  blackscholes_model.cpp  blackscholes_model.results  in_16K.txt  in_4K.model  in_4K.txt  results.model  setup.py
examples/cc/: Makefile  privateSharedRAFT.cfg  random.trace  sharedSharedRAFT.cfg  sharedSharedRAST.cfg  test.trace  test_hit.trace  test_inv_cache.trace  test_serialize.trace  test_share.trace  test_share_and_invalidate.trace
examples/chatter/: Makefile  chatter.c  chatter.cfg
examples/hello/: .gitignore  Makefile  hello.c  hello.cfg
examples/library-competition/: generate_synthetic_threads.py  shmem_raonly_p64_1vc_il1l2.cfg
examples/mcpu/: Makefile  log  log.object  mcpu.assembly  mcpu.c  mcpu.cfg  mcpu.img  mcpu.object  run commands.txt
m4/: .gitignore  fancy_path_prog.m4
notes/: cwf-notes.txt
scripts/analysis/: lcc_result_parse.py  plot-latency.py
scripts/config/: dor-o1turn.py  romm2-valiant.py  xy-shmem.py
scripts/event/: synthetic-benchmarks.py
src/: .gitignore  Makefile.am
src/boost.task-0.4.2/: Makefile.am
src/common/: .gitignore  Makefile.am  bits.hpp  clockable.hpp  config.hpp  cstdint.hpp  dconfig.hpp  endian.hpp  error.cpp  error.hpp  id_factory.cpp  id_factory.hpp  logger.cpp  logger.hpp  par_random.cpp  par_random.hpp  random.cpp  random.hpp  vcd.cpp  vcd.hpp  version.cpp  version.hpp
src/cpu/: .gitignore  Makefile.am  cpu.cpp  cpu.hpp  instr.cpp  instr.hpp  instr.tab  instr2code  instr_format.hpp  mem.cpp  mem.hpp  reg.cpp  reg.hpp  syscalls.hpp
src/exec/: .cache.cpp.swo  Makefile.am  Makefile.am.orig  awayCache.cpp  awayCache.hpp  cache.cpp  cache.hpp  cat.cpp  cat.hpp  catStrip.cpp  catStrip.hpp  core.cpp  core.hpp  coreMessageQueue.cpp  coreMessageQueue.hpp  dramController.cpp  dramController.hpp  homeCache.cpp  homeCache.hpp  magicMemory.hpp  mcpu.cpp  mcpu.cpp.orig  mcpu.hpp  mcpu.hpp.orig  mcpu_props.hpp  memStats.cpp  memStats.hpp  memory.cpp  memory.hpp  memoryRequest.cpp  memoryRequest.hpp  memory_types.cpp  memory_types.hpp  memtraceCore.cpp  memtraceCore.hpp  memtraceThread.cpp  memtraceThread.hpp  memtraceThreadPool.cpp  memtraceThreadPool.hpp  memtraceThreadStats.cpp  (+35 more)
src/inject/: Makefile.am  ginj.cpp  ginj.hpp  injector.cpp  injector.hpp
src/mem/: Makefile.am  main_mem.cpp  main_mem.hpp  mem.cpp  mem.hpp
src/net/: .gitignore  Makefile.am  arbiter.cpp  arbiter.hpp  bridge.cpp  bridge.hpp  bridge_channel_alloc.cpp  bridge_channel_alloc.hpp  channel_alloc.cpp  channel_alloc.hpp  crossbar.cpp  crossbar.hpp  dma.cpp  dma.hpp  dynamic_bridge_channel_alloc.cpp  dynamic_bridge_channel_alloc.hpp  dynamic_channel_alloc.cpp  dynamic_channel_alloc.hpp  egress.cpp  egress.hpp  egress_id.cpp  egress_id.hpp  flit.cpp  flit.hpp  flow.cpp  flow_id.cpp  flow_id.hpp  ingress.cpp  ingress.hpp  ingress_id.cpp  ingress_id.hpp  link_id.cpp  link_id.hpp  node.cpp  node.hpp  node_id.cpp  node_id.hpp  power_controller.cpp  power_controller.hpp  pressure_tracker.cpp  (+21 more)
src/pe/: Makefile.am  pe.cpp  pe.hpp
src/power/: DarOrn_power.cpp  DarOrn_power.hpp  Makefile.am  SIM_arbiter.c  SIM_arbiter.h  SIM_array_l.c  SIM_array_m.c  SIM_clock.c  SIM_crossbar.c  SIM_misc.c  SIM_parameter.h  SIM_permu.c  SIM_port.h  SIM_reg.c  SIM_router.h  SIM_router_area_bk.c  SIM_router_power.c  SIM_util.h  \
src/rts/: .gitignore  Makefile.am  crt0.c  dar-rts-config.in  rts.c  rts.h  rts.h.orig
src/sim/: .gitignore  Makefile.am  darsim.cpp  sim.cpp  sim.hpp
src/sys/: Makefile.am  event_parser.cpp  event_parser.hpp  sys.cpp  sys.cpp.orig  sys.hpp  tile.cpp  tile.hpp
src/tools/: .gitignore  Makefile.am  darimg
tests/: .gitignore  Makefile.am
tests/QMTest/: configuration
tests/cli.qms/darimg.qms/: help.qmt
tests/cli.qms/darsim.qms/: help.qmt
tests/data/: hello.cfg  hello.mips  o1turn-1qpf-vc2-mux2-bw2.cfg  o1turn-1qpf-vc2-mux2-bw2.img  o1turn-std-vc2-mux2-bw2.cfg  shuffle-s8-p8.evt  single-packets.evt  xy-1qpf-vc2-mux2-bw2.cfg  xy-std-vc2-mux2-bw2.cfg
tests/injector.qms/: o1turn-1qpf-vc2-mux2-bw2.qmt  o1turn-std-vc2-mux2-bw2.qmt  romm2-1qpf-vc2-mux2-bw2.qmt  romm2-std-vc2-mux2-bw2.qmt  single-packets.qmt  xy-1qpf-vc2-mux2-bw2.qmt  xy-std-vc2-mux2-bw2.qmt
tests/mips.qms/: hello.qmt
