AM_CPPFLAGS = $(BOOST_CPPFLAGS)
AM_LDFLAGS = $(BOOST_LDFLAGS)
AM_CXXFLAGS = -Wall -Wno-uninitialized -Werror

noinst_LTLIBRARIES = libdarpower.la

libdarpower_la_SOURCES = \
    SIM_ALU.h \
    SIM_ALU_model.h \
    SIM_arbiter.h \
    SIM_array.h \
    SIM_array_internal.h \
    SIM_array_model.h \
    SIM_cam.h \
    SIM_clock.h \
    SIM_crossbar.h \
    SIM_link.h \
    SIM_link_model.h \
    SIM_misc.h \
    SIM_misc_model.h \
    SIM_parameter.h \
    SIM_permu.h \
    SIM_permu_model.h \
    SIM_port_alpha.h \
    SIM_port.h \
    SIM_port_ibm.h \
    SIM_port_raw.h \
    SIM_port_TRIPS.h \
    SIM_router.h \
    SIM_router_model.h \
    SIM_router_power.h \
    SIM_static.h \
    SIM_technology.h \
    SIM_technology_v1.h \
    SIM_technology_v2.h \
    SIM_time.h \
    SIM_util.h \
    SIM_arbiter.c \
    SIM_array_l.c \
    SIM_array_m.c \
    SIM_cam.c \
    SIM_clock.c \
    SIM_crossbar.c \
    SIM_link.c \
    SIM_misc.c \
    SIM_permu.c \
    SIM_router_power.c \
    SIM_static.c \
    SIM_time.c \
    SIM_util.c \
    DarOrn_power.hpp \
    DarOrn_power.cpp


